# pas2dox

./: CMakeLists.txt  LICENSE  Makefile  NEWS  pas2dox.l  testsuite.sh
.github/workflows/: cmake.yml
src/: CMakeLists.txt  config.h.in  pas2dox.l
test/: CMakeLists.txt  array.pas.cpp  classes.pas.cpp  comments.pas.cpp  comments_in_function_args.pas.cpp  const_before_type.pas.cpp  constants.pas.cpp  enum.pas.cpp  func.pas.cpp  inner_class.pas.cpp  properties.pas.cpp  record.pas.cpp  testone.cmake  using.pas.cpp  using_in.pas  using_in.pas.cpp
