cmake_minimum_required(VERSION 3.6)
project(pas2dox VERSION 1.0.0)
set(CMAKE_CXX_STANDARD 11)
add_subdirectory(src)
enable_testing()
add_subdirectory(test)
SET(CPACK_SOURCE_IGNORE_FILES "/build/;.swp;.git")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
INCLUDE(InstallRequiredSystemLibraries)
include (CPack)
