cmake_minimum_required(VERSION 3.1)
set(EXECUTABLE_NAME "pas2dox")
find_package(FLEX)
if(MSVC)
    add_compile_opttions(-D_WIN32_WINDOWS=0x0601 -D_WIN32_WINNT=0x0601 --wincompat)
else()
    add_compile_options(-Wall -Wextra -Wpedantic)
endif(MSVC)
FLEX_TARGET(scanner pas2dox.l ${CMAKE_CURRENT_BINARY_DIR}/pas2dox.cpp)
add_executable(${EXECUTABLE_NAME} ${FLEX_scanner_OUTPUTS})
target_include_directories(${EXECUTABLE_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
INSTALL(TARGETS ${EXECUTABLE_NAME} DESTINATION bin)
